--- a/index.css
+++ b/index.css
@@ -28,19 +28,23 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height:100px;
+    height:130px;
     padding:0.5rem 0.75rem ;
     border-radius:0.75rem ; 
    
 }
 .nav-option{
+    
    line-height: 2.5rem;
-   padding: 0.5rem 0.75rem;
-   opacity:0.7;
+   padding: 0.3 0.5rem 0.5rem 0.3rem;
+   /* padding: 0.5rem 0.75rem; */
+   opacity:1;
+ 
 }
 
 .nav-option i{
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    padding-left:0.4rem;
 }
 
 .nav-option a{
@@ -118,13 +122,13 @@ align-items: center;
     flex: 1;
     border-radius:1rem;
     overflow:auto;
-    padding:0 1.5rem 0 1.5rem ;
+   
 }
 
 .sticky-nav{
     position:sticky;
     top: 0;
-    background-color: #121212;
+    background-color: #080808;
     display: flex;
     justify-content:space-between ;
     align-items: center;
@@ -147,20 +151,39 @@ margin-right: 1rem;
 background-color:black;
 color: #fff;
 }
-
-.card{
-    background-color:#232323 ;
+.card_circle
+{
+   
     width: 150px;
     border-radius:0.5rem;
     padding:1rem;
-    margin-left: 1.5rem;
+    margin-left: 0.3rem;
+    margin-top: 1rem;
+}
+.card_circle img{
+    border-radius:50%;
+}
+
+.card_circle:hover{
+    background-color:#232323 ;
+}
+.card:hover{
+    background-color:#232323 ;
+}
+
+.card{
+   
+    width: 150px;
+    border-radius:0.5rem;
+    padding:1rem;
+    margin-left: 0.3rem;
     margin-top: 1rem;
 }
 .cards-container
 {
     display: flex;
     flex-wrap: wrap;
-
+  
 
 }
 .card-img{
@@ -280,35 +303,69 @@ opacity: 0.5;
 
 /*********************footer****************************/
 .footer{
-    height: 600px;
-    display: flex;
-    justify-content: center;
+    height: 440px;
+    /* display: flex;
+    justify-content: center; */
     align-items: center;
+    padding:30px;
    
 }
-
-.line{
-    width: 99%;
-    height: 15%;
-    border-top: 1px solid white;
-    opacity: 0.4;
+.footer hr{
+    opacity: 0.2;
+}
+.footer_content1
+{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content:space-between;
+    height:220px;
+   margin-bottom: 0 0 32px 0 ;
+  
+}
+
+.footer_link2{
+display: flex;
+justify-content: space-between;
+margin-left:20rem;
+}
+
+.footer_link2 .icon i{
+  font-size: 1.5rem;
+}
+
+.footer_link2 .icon a i{
+   align-items:center;
+}
+.content{
+    display: flex;
+    justify-content: space-between;
+    width:60%;
+   
+
+
+}
+.content2{
+   
+    width:40%;
+    
+}
+
+.footer_link
+{
+    display: flex;
+    flex-direction: column;
+    margin-left:10px;
+    
+}
+
+.footer_link a{
+   opacity: 0.4;
+    margin-top:0.7rem;
+   
+}
+.footer_content2{
+    display: flex;
+   margin-top: 3rem;
     font-size:14px;
+    opacity: 0.4;
 }
 
-.line i:hover{
-    margin-left:10px;
-}
-
-.line i:hover{
-    opacity:1 ;  
-}
-
-.line div{
-    margin-left:10px;
-}
-.line .year{
-    margin-right:-25rem;
-}
